# selfie

./: Cargo.toml  TODO.txt  rust-toolchain.toml
.github/workflows/: coverage.yml  rust.yml
examples/: Arith.self  Attributes.self  ChainedCalls.self  Eval.self  HelloWorld.self  Intrinsics.self  Methods.self  Namer.self  NamerBad.self  ParserBad.self  PatternMatch.self  PatternMatchBad.self  Strings.self  Typer.self  TyperBad.self
selfie/: Cargo.toml
selfie-ast/: Cargo.toml
selfie-ast/src/: attribute.rs  call_graph.rs  decl.rs  lib.rs  macros.rs  name.rs  program.rs  sym.rs  symbols.rs  ty.rs  visitor.rs
selfie-ast/src/utils/: di_graph.rs  mod.rs
selfie-ast/src/visitor/: expr.rs  ty.rs
selfie-lexer/: Cargo.toml
selfie-lexer/src/: lib.rs  util.rs
selfie-lsp/: Cargo.toml
selfie-lsp/src/: main.rs
selfie-namer/: Cargo.toml
selfie-namer/src/: error.rs  lib.rs  scope.rs  scope_stack.rs  symbol_table.rs
selfie-parser/: Cargo.toml
selfie-parser/src/: error.rs  lib.rs
selfie-typer/: Cargo.toml
selfie-typer/src/: ctx.rs  error.rs  lib.rs  ty.rs
selfie/src/: ast.rs  cli.rs  lib.rs  main.rs  parser.rs  report.rs
src/: ast.rs  lexer.rs  main.rs  parser.rs
src/lexer/: string.rs
tree-sitter-selfie/: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter-selfie.wasm
tree-sitter-selfie/bindings/node/: binding.cc  index.js
tree-sitter-selfie/bindings/rust/: lib.rs
tree-sitter-selfie/queries/: highlights.scm
tree-sitter-selfie/src/: grammar.json  node-types.json  parser.c
