[workspace]
resolver = "2"

members = [
  "selfie",
  "selfie-lexer",
  "selfie-ast",
  "selfie-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
logos             = "0.13"
nom               = "7"
ordered-float     = "4"
pretty_assertions = "1"
thiserror         = "1"
