[workspace]
resolver = "2"

members = [
  "selfie",
  "selfie-lexer",
  "selfie-ast",
  "selfie-parser",
  "selfie-namer",
  "selfie-typer",
]

exclude = [
  "tree-sitter-selfie",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ariadne           = { version = "0.3", features = ["auto-color"] }
chumsky           = { version = "1.0.0-alpha.6", features = ["label", "pratt"] }
indexmap          = "2.1.0"
itertools         = "0.12.0"
logos             = "0.13"
ordered-float     = "4"
pretty_assertions = "1"
thiserror         = "1"
ustr              = "0.10"
