[package]
name = "selfie-lexer"

version.workspace = true
edition.workspace = true

[dependencies]
chumsky.workspace       = true
logos.workspace         = true
ordered-float.workspace = true
thiserror.workspace     = true
ustr.workspace          = true

[dev-dependencies]
pretty_assertions.workspace = true
