[package]
name = "selfie-parser"
version.workspace = true
edition.workspace = true

[dependencies]
selfie-ast    = { path = "../selfie-ast" }
selfie-lexer  = { path = "../selfie-lexer" }

thiserror.workspace     = true
chumsky.workspace       = true

[dev-dependencies]
pretty_assertions.workspace = true
