[package]
name = "selfie"

version.workspace = true
edition.workspace = true

[dependencies]
selfie-ast    = { path = "../selfie-ast" }
selfie-lexer  = { path = "../selfie-lexer" }
selfie-parser = { path = "../selfie-parser" }

ariadne.workspace       = true
chumsky.workspace       = true
nom.workspace           = true
ordered-float.workspace = true
thiserror.workspace     = true

[dev-dependencies]
pretty_assertions.workspace = true
