[package]
name = "selfie"

version.workspace = true
edition.workspace = true

[dependencies]
selfie-ast    = { path = "../selfie-ast" }
selfie-lexer  = { path = "../selfie-lexer" }
selfie-parser = { path = "../selfie-parser" }
selfie-namer  = { path = "../selfie-namer" }

ariadne.workspace       = true
chumsky.workspace       = true
ordered-float.workspace = true
thiserror.workspace     = true

[dev-dependencies]
pretty_assertions.workspace = true
